Fixed naming, dtos, test updates